dart/vendor/sweph/native/sweph/src/swephexp.h



/****************************
 * exports from swephlib.c
 ****************************/

/* delta t */
ext_def( double ) swe_deltat(double tjd);

ext_def(double) swe_deltat_ex(double tjd, int32 iflag, char *serr);


/* equation of time */
ext_def(int32) swe_time_equ(double tjd, double *te, char *serr);

ext_def(int32) swe_lmt_to_lat(double tjd_lmt, double geolon, double *tjd_lat, char *serr);

ext_def(int32) swe_lat_to_lmt(double tjd_lat, double geolon, double *tjd_lmt, char *serr);


/* sidereal time */
ext_def( double ) swe_sidtime0(double tjd_ut, double eps, double nut);

ext_def( double ) swe_sidtime(double tjd_ut);

ext_def( void ) swe_set_interpolate_nut(AS_BOOL do_interpolate);


/* coordinate transformation polar -> polar */
ext_def( void ) swe_cotrans(double *xpo, double *xpn, double eps);

ext_def( void ) swe_cotrans_sp(double *xpo, double *xpn, double eps);


/* tidal acceleration to be used in swe_deltat() */
ext_def( double ) swe_get_tid_acc(void);

ext_def( void ) swe_set_tid_acc(double t_acc);


/* set a user defined delta t to be returned by functions
 * swe_deltat() and swe_deltat_ex() */
ext_def (void) swe_set_delta_t_userdef(double dt);


ext_def( double ) swe_degnorm(double x);

ext_def( double ) swe_radnorm(double x);

ext_def( double ) swe_rad_midp(double x1, double x0);

ext_def( double ) swe_deg_midp(double x1, double x0);


ext_def( void ) swe_split_deg(double ddeg, int32 roundflag, int32 *ideg, int32 *imin, int32 *isec, double *dsecfr, int32 *isgn);


/*******************************************************
 * other functions from swephlib.c;
 * they are not needed for Swiss Ephemeris,
 * but may be useful to former Placalc users.
 ********************************************************/

/* normalize argument into interval [0..DEG360] */
ext_def( centisec ) swe_csnorm(centisec p);


/* distance in centisecs p1 - p2 normalized to [0..360[ */
ext_def( centisec ) swe_difcsn (centisec p1, centisec p2);


ext_def( double ) swe_difdegn (double p1, double p2);


/* distance in centisecs p1 - p2 normalized to [-180..180[ */
ext_def( centisec ) swe_difcs2n(centisec p1, centisec p2);


ext_def( double ) swe_difdeg2n(double p1, double p2);

ext_def( double ) swe_difrad2n(double p1, double p2);


/* round second, but at 29.5959 always down */
ext_def( centisec ) swe_csroundsec(centisec x);


/* double to int32 with rounding, no overflow check */
ext_def( int32 ) swe_d2l(double x);


/* monday = 0, ... sunday = 6 */
ext_def( int ) swe_day_of_week(double jd);


ext_def( char *) swe_cs2timestr(CSEC t, int sep, AS_BOOL suppressZero, char *a);


ext_def( char *) swe_cs2lonlatstr(CSEC t, char pchar, char mchar, char *s);