dart/vendor/sweph/lib/src/bindings.dart


  late final _swe_deltat_exPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Double, int32, ffi.Pointer<ffi.Uint8>)>>('swe_deltat_ex');
  late final _swe_deltat_ex = _swe_deltat_exPtr
      .asFunction<double Function(double, int, ffi.Pointer<ffi.Uint8>)>();

  /// equation of time
  int swe_time_equ(
    double tjd,
    ffi.Pointer<ffi.Double> te,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_time_equ(
      tjd,
      te,
      serr,
    );
  }

  late final _swe_time_equPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Double, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_time_equ');
  late final _swe_time_equ = _swe_time_equPtr.asFunction<
      int Function(double, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  int swe_lmt_to_lat(
    double tjd_lmt,
    double geolon,
    ffi.Pointer<ffi.Double> tjd_lat,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_lmt_to_lat(
      tjd_lmt,
      geolon,
      tjd_lat,
      serr,
    );
  }

  late final _swe_lmt_to_latPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Double, ffi.Double, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_lmt_to_lat');
  late final _swe_lmt_to_lat = _swe_lmt_to_latPtr.asFunction<
      int Function(
          double, double, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  int swe_lat_to_lmt(
    double tjd_lat,
    double geolon,
    ffi.Pointer<ffi.Double> tjd_lmt,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_lat_to_lmt(
      tjd_lat,
      geolon,
      tjd_lmt,
      serr,
    );
  }

  late final _swe_lat_to_lmtPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Double, ffi.Double, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_lat_to_lmt');
  late final _swe_lat_to_lmt = _swe_lat_to_lmtPtr.asFunction<
      int Function(
          double, double, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  /// sidereal time
  double swe_sidtime0(
    double tjd_ut,
    double eps,
    double nut,
  ) {
    return _swe_sidtime0(
      tjd_ut,
      eps,
      nut,
    );
  }

  late final _swe_sidtime0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Double, ffi.Double, ffi.Double)>>('swe_sidtime0');
  late final _swe_sidtime0 =
      _swe_sidtime0Ptr.asFunction<double Function(double, double, double)>();

  double swe_sidtime(
    double tjd_ut,
  ) {
    return _swe_sidtime(
      tjd_ut,
    );
  }

  late final _swe_sidtimePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'swe_sidtime');
  late final _swe_sidtime =
      _swe_sidtimePtr.asFunction<double Function(double)>();

  void swe_set_interpolate_nut(
    int do_interpolate,
  ) {
    return _swe_set_interpolate_nut(
      do_interpolate,
    );
  }

  late final _swe_set_interpolate_nutPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(AS_BOOL)>>(
          'swe_set_interpolate_nut');
  late final _swe_set_interpolate_nut =
      _swe_set_interpolate_nutPtr.asFunction<void Function(int)>();

  /// coordinate transformation polar -> polar
  void swe_cotrans(
    ffi.Pointer<ffi.Double> xpo,
    ffi.Pointer<ffi.Double> xpn,
    double eps,
  ) {
    return _swe_cotrans(
      xpo,
      xpn,
      eps,
    );
  }

  late final _swe_cotransPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>,
              ffi.Double)>>('swe_cotrans');
  late final _swe_cotrans = _swe_cotransPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, double)>();

  void swe_cotrans_sp(
    ffi.Pointer<ffi.Double> xpo,
    ffi.Pointer<ffi.Double> xpn,
    double eps,
  ) {
    return _swe_cotrans_sp(
      xpo,
      xpn,
      eps,
    );
  }

  late final _swe_cotrans_spPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>,
              ffi.Double)>>('swe_cotrans_sp');
  late final _swe_cotrans_sp = _swe_cotrans_spPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, double)>();

  /// tidal acceleration to be used in swe_deltat()
  double swe_get_tid_acc() {
    return _swe_get_tid_acc();
  }

  late final _swe_get_tid_accPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function()>>('swe_get_tid_acc');
  late final _swe_get_tid_acc =
      _swe_get_tid_accPtr.asFunction<double Function()>();

  void swe_set_tid_acc(
    double t_acc,
  ) {
    return _swe_set_tid_acc(
      t_acc,
    );
  }

  late final _swe_set_tid_accPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Double)>>(
          'swe_set_tid_acc');
  late final _swe_set_tid_acc =
      _swe_set_tid_accPtr.asFunction<void Function(double)>();

  /// set a user defined delta t to be returned by functions
  /// swe_deltat() and swe_deltat_ex()
  void swe_set_delta_t_userdef(
    double dt,
  ) {
    return _swe_set_delta_t_userdef(
      dt,
    );
  }

  late final _swe_set_delta_t_userdefPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Double)>>(
          'swe_set_delta_t_userdef');
  late final _swe_set_delta_t_userdef =
      _swe_set_delta_t_userdefPtr.asFunction<void Function(double)>();

  double swe_degnorm(
    double x,
  ) {
    return _swe_degnorm(
      x,
    );
  }

  late final _swe_degnormPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'swe_degnorm');
  late final _swe_degnorm =
      _swe_degnormPtr.asFunction<double Function(double)>();

  double swe_radnorm(
    double x,
  ) {
    return _swe_radnorm(
      x,
    );
  }

  late final _swe_radnormPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'swe_radnorm');
  late final _swe_radnorm =
      _swe_radnormPtr.asFunction<double Function(double)>();

  double swe_rad_midp(
    double x1,
    double x0,
  ) {
    return _swe_rad_midp(
      x1,
      x0,
    );
  }

  late final _swe_rad_midpPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
          'swe_rad_midp');
  late final _swe_rad_midp =
      _swe_rad_midpPtr.asFunction<double Function(double, double)>();

  double swe_deg_midp(
    double x1,
    double x0,
  ) {
    return _swe_deg_midp(
      x1,
      x0,
    );
  }

  late final _swe_deg_midpPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
          'swe_deg_midp');
  late final _swe_deg_midp =
      _swe_deg_midpPtr.asFunction<double Function(double, double)>();

  void swe_split_deg(
    double ddeg,
    int roundflag,
    ffi.Pointer<int32> ideg,
    ffi.Pointer<int32> imin,
    ffi.Pointer<int32> isec,
    ffi.Pointer<ffi.Double> dsecfr,
    ffi.Pointer<int32> isgn,
  ) {
    return _swe_split_deg(
      ddeg,
      roundflag,
      ideg,
      imin,
      isec,
      dsecfr,
      isgn,
    );
  }

  late final _swe_split_degPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double,
              int32,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<int32>)>>('swe_split_deg');
  late final _swe_split_deg = _swe_split_degPtr.asFunction<
      void Function(double, int, ffi.Pointer<int32>, ffi.Pointer<int32>,
          ffi.Pointer<int32>, ffi.Pointer<ffi.Double>, ffi.Pointer<int32>)>();

  /// normalize argument into interval [0..DEG360]
  int swe_csnorm(
    int p,
  ) {
    return _swe_csnorm(
      p,
    );
  }

  late final _swe_csnormPtr =
      _lookup<ffi.NativeFunction<centisec Function(centisec)>>('swe_csnorm');
  late final _swe_csnorm = _swe_csnormPtr.asFunction<int Function(int)>();

  /// distance in centisecs p1 - p2 normalized to [0..360[
  int swe_difcsn(
    int p1,
    int p2,
  ) {
    return _swe_difcsn(
      p1,
      p2,
    );
  }

  late final _swe_difcsnPtr =
      _lookup<ffi.NativeFunction<centisec Function(centisec, centisec)>>(
          'swe_difcsn');
  late final _swe_difcsn = _swe_difcsnPtr.asFunction<int Function(int, int)>();

  double swe_difdegn(
    double p1,
    double p2,
  ) {
    return _swe_difdegn(
      p1,
      p2,
    );
  }

  late final _swe_difdegnPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
          'swe_difdegn');
  late final _swe_difdegn =
      _swe_difdegnPtr.asFunction<double Function(double, double)>();

  /// distance in centisecs p1 - p2 normalized to [-180..180[
  int swe_difcs2n(
    int p1,
    int p2,
  ) {
    return _swe_difcs2n(
      p1,
      p2,
    );
  }

  late final _swe_difcs2nPtr =
      _lookup<ffi.NativeFunction<centisec Function(centisec, centisec)>>(
          'swe_difcs2n');
  late final _swe_difcs2n =
      _swe_difcs2nPtr.asFunction<int Function(int, int)>();

  double swe_difdeg2n(
    double p1,
    double p2,
  ) {
    return _swe_difdeg2n(
      p1,
      p2,
    );
  }

  late final _swe_difdeg2nPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
          'swe_difdeg2n');
  late final _swe_difdeg2n =
      _swe_difdeg2nPtr.asFunction<double Function(double, double)>();

  double swe_difrad2n(
    double p1,
    double p2,
  ) {
    return _swe_difrad2n(
      p1,
      p2,
    );
  }

  late final _swe_difrad2nPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
          'swe_difrad2n');
  late final _swe_difrad2n =
      _swe_difrad2nPtr.asFunction<double Function(double, double)>();

  /// round second, but at 29.5959 always down
  int swe_csroundsec(
    int x,
  ) {
    return _swe_csroundsec(
      x,
    );
  }

  late final _swe_csroundsecPtr =
      _lookup<ffi.NativeFunction<centisec Function(centisec)>>(
          'swe_csroundsec');
  late final _swe_csroundsec =
      _swe_csroundsecPtr.asFunction<int Function(int)>();

  /// double to int32 with rounding, no overflow check
  int swe_d2l(
    double x,
  ) {
    return _swe_d2l(
      x,
    );
  }

  late final _swe_d2lPtr =
      _lookup<ffi.NativeFunction<int32 Function(ffi.Double)>>('swe_d2l');
  late final _swe_d2l = _swe_d2lPtr.asFunction<int Function(double)>();

  /// monday = 0, ... sunday = 6
  int swe_day_of_week(
    double jd,
  ) {
    return _swe_day_of_week(
      jd,
    );
  }

  late final _swe_day_of_weekPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Double)>>(
          'swe_day_of_week');
  late final _swe_day_of_week =
      _swe_day_of_weekPtr.asFunction<int Function(double)>();

  ffi.Pointer<ffi.Uint8> swe_cs2timestr(
    int t,
    int sep,
    int suppressZero,
    ffi.Pointer<ffi.Uint8> a,
  ) {
    return _swe_cs2timestr(
      t,
      sep,
      suppressZero,
      a,
    );
  }

  late final _swe_cs2timestrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(centisec, ffi.Int32, AS_BOOL,
              ffi.Pointer<ffi.Uint8>)>>('swe_cs2timestr');
  late final _swe_cs2timestr = _swe_cs2timestrPtr.asFunction<
      ffi.Pointer<ffi.Uint8> Function(int, int, int, ffi.Pointer<ffi.Uint8>)>();

  ffi.Pointer<ffi.Uint8> swe_cs2lonlatstr(
    int t,
    int pchar,
    int mchar,
    ffi.Pointer<ffi.Uint8> s,
  ) {
    return _swe_cs2lonlatstr(
      t,
      pchar,
      mchar,
      s,
    );
  }
